# rr-intelligence-platform

./: .gitignore  ONBOARDING.md  docker-compose.yml  sync_vercel_env.py  test_analyze.py  test_ingestion_api.py
backend/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.ml  pyproject.toml  requirements-ml.txt  requirements.txt  test_cognito_auth.py
backend/alembic/: env.py
backend/jobs/: batch_score.py  lambda_nightly_scorer.py
backend/scripts/: demo_sf_onboarding.py  deploy_lambda.sh  deploy_prod.sh  init_prod_db.py  manage_costs.sh  seed_chicago_data.py  seed_local_data.py  seed_seattle.py  test_db_conn.py
backend/scripts/ingestion/: download_seattle_csv.py  ingest_csv.py
backend/src/api/: main.py
backend/src/api/middleware/: auth.py
backend/src/api/routes/: analytics.py  dashboard.py  establishments.py  ingestion.py  inspections.py  queue.py  tenants.py  users.py
backend/src/db/: database.py
backend/src/models/: core.py
backend/src/services/: cognito_cache.py  ml_pipeline.py  routing.py
backend/tests/: test_ml_pipeline.py
docs/: b2b_saas_architecture.md  implementation_plan.md  ml_implementation_flow.md  product_roadmap_expansion.md  quickstart.md  restaurantrisk_mvp_design.md
frontend/: Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json  push_env.sh  vercel.json
models/: global_baseline_xgb.pkl
notebooks/: train_global_model.ipynb  train_global_model.py
terraform/: alb.tf  backend_resources.tf  cognito.tf  ecr.tf  ecr_ml.tf  ecs_api.tf  eventbridge_ml.tf  main.tf  outputs.tf  rds.tf  terraform.tfvars  (+1 more)
(+64 files in other folders)
